Fix project structure and packages for SonarCloud